src/snapshots/cargo_vet__tests__mock-simple-missing-transitive.snap
---
source: src/tests.rs
assertion_line: 711
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  transitive-third-party1:10.0.0 missing ["reviewed"]

recommended audits:
    transitive-third-party1:10.0.0  for reviewed  (100 lines)  (used by third-party1) 

Use |cargo vet certify| to record the audits.

