src/snapshots/cargo_vet__tests__mock-simple-needed-reversed-delta-to-unaudited.snap
---
source: src/tests.rs
assertion_line: 1191
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

dependency tree:
  root-package:10.0.0
    first-party:10.0.0
      third-party1:10.0.0 needs ["reviewed"]
Use |cargo vet certify| to record the audits.
recommended audits:
    third-party1:10.0.0 full 10.0.0 (+100) for ["reviewed"]


