src/snapshots/cargo_vet__tests__mock-simple-reverse-delta-to-full-audit.snap
---
source: src/tests.rs
assertion_line: 1199
expression: stdout
---
Vetting Succeeded (3 fully audited)

