src/snapshots/cargo_vet__tests__mock-simple-reverse-delta-to-unaudited.snap
---
source: src/tests.rs
assertion_line: 1228
expression: stdout
---
Vetting Succeeded (2 fully audited, 1 partially audited)

