src/snapshots/cargo_vet__tests__mock-simple-violation-cur-full-audit.snap
---
source: src/tests.rs
assertion_line: 915
expression: stdout
---
Violations Found!
  third-party1:10.0.0
    the own audit 10.0.0
      criteria: "safe-to-deploy"
    conflicts with own violation against =10
      criteria: "weak-reviewed"

    this version is forbidden by own violation against =10
      criteria: "weak-reviewed"


