src/snapshots/cargo_vet__tests__mock-simple-violation-delta.snap
---
source: src/tests.rs
assertion_line: 938
expression: stdout
---
Violations Found!
  third-party1:10.0.0
    the own audit 3.0.0 -> 5.0.0
      criteria: "safe-to-deploy"
    conflicts with own violation against =5.0.0
      criteria: "weak-reviewed"

    the own audit 5.0.0 -> 10.0.0
      criteria: "safe-to-deploy"
    conflicts with own violation against =5.0.0
      criteria: "weak-reviewed"


