src/snapshots/cargo_vet__tests__mock-simple-violation-full-audit.snap
---
source: src/tests.rs
expression: output
---
Violations Found!
  third-party1:10.0.0
    the own audit 3.0.0
      criteria: ["safe-to-deploy"]
    conflicts with own violation against =3.0.0
      criteria: ["weak-reviewed"]

    the own audit 3.0.0 -> 5.0.0
      criteria: ["safe-to-deploy"]
    conflicts with own violation against =3.0.0
      criteria: ["weak-reviewed"]


