src/snapshots/cargo_vet__tests__mock-simple-violation-hit-with-extra-junk.snap
---
source: src/tests.rs
expression: output
---
Violations Found!
  third-party1:10.0.0
    the own audit 10.0.0
      criteria: ["safe-to-run"]
    conflicts with own violation against *
      criteria: ["safe-to-run", "fuzzed"]


